# OTUS_ALGO_1

./: .gitmodules  CMakeLists.txt  HarryPotter  README.md  test_folder_define.h.in
src/: FirstAssignmentFactory.cpp  FirstAssignmentFactory.h  LuckyTickets.h  StringLength.h  Task.h  TaskFactory.cpp  TaskFactory.h  TestInputOutputTaker.cpp  TestInputOutputTaker.h  TestTask.cpp  TestTask.h  main.cpp
